# cognitx-observability

./: .gitignore  LICENSE  README.md  pyproject.toml
docker/: .env.example  docker-compose.yml  prometheus-alerts.yml  prometheus.yml
docker/grafana/dashboards/: analytics-deep-dive.json  service-overview.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
obsx/: __init__.py  _metrics.py  _middleware.py  _setup.py
