[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsx"
version = "0.4.0"
description = "Plug-and-play observability for Python services - Phoenix OTEL tracing + Prometheus metrics + auto-instrumentation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "CognitX AI GmbH", email = "engineering@cognitx.ai" }]
requires-python = ">=3.10"
keywords = ["observability", "opentelemetry", "prometheus", "phoenix", "tracing", "metrics", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # OpenTelemetry core
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",

    # Exporters
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-exporter-prometheus>=0.61b0",

    # Auto-instrumentation (always available)
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",

    # Prometheus client (for /metrics endpoint)
    "prometheus-client>=0.24.1",

    # Phoenix OTEL (LLM tracing)
    "arize-phoenix-otel>=0.15.0",

    # OpenInference LLM instrumentation (semantic spans for OpenAI SDK)
    # Pinned <0.1.40: newer versions need openinference-semantic-conventions >0.1.28 (unreleased)
    "openinference-instrumentation-openai>=0.1.19,<0.1.40",

    # FastAPI (for metrics_router)
    "fastapi>=0.135.1",
]

[project.optional-dependencies]
redis = ["opentelemetry-instrumentation-redis>=0.61b0"]
sqlalchemy = ["opentelemetry-instrumentation-sqlalchemy>=0.61b0"]
logging = ["opentelemetry-instrumentation-logging>=0.61b0"]
all = ["obsx[redis,sqlalchemy,logging]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/CognitX-AI-GmbH/cognitx-observability"

[tool.hatch.build.targets.wheel]
packages = ["obsx"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "C4", "UP", "ARG001"]
ignore = ["E501", "B008", "B904"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
